--- a/source/index.html
+++ b/source/index.html
@@ -45,6 +45,12 @@
               <article class="main-nav__item main-nav__item--order main-nav__item--secondary">
                 <a class="main-nav__link link" href="#">Вязание на заказ</a>
               </article>
+              <article class="main-nav__item main-nav__item--new main-nav__item--secondary">
+                <a class="main-nav__link link" href="#">Новые поступления</a>
+              </article>
+              <article class="main-nav__item main-nav__item--sale main-nav__item--secondary">
+                <a class="main-nav__link link" href="#">Распродажа</a>
+              </article>
             </div>
             <div class="nav-list__primary">
               <article class="main-nav__item main-nav__item--search main-nav__item--primary">
@@ -67,11 +73,11 @@
       <section class="hero">
         <h2 class="hero__title hero-title title">Милые штуки ручной работы для дома</h2>
         <div class="hero__container type-products">
-          <a class="type-products__link type-products__link--interior hero-link" href="catalog.html">
+          <a class="type-products__link type-products__link--interior hero-link link" href="catalog.html">
             <p class="hero-link__title hero-link__title--interior title hero-link-title"><span
                 class="hero-link-title__text">Предметы интерьера</span></p>
           </a>
-          <a class="type-products__link type-products__link--toys hero-link" href="catalog.html">
+          <a class="type-products__link type-products__link--toys hero-link link" href="catalog.html">
             <p class="hero-link__title hero-link__title--toys title hero-link-title"><span
                 class="hero-link-title__text">Детские игрушки</span></p>
           </a>
@@ -80,7 +86,7 @@
       <section class="week-product">
         <h2 class="visually-hidden">Товар недели</h2>
         <div class="week-product__wrapper wrapper">
-          <h3 class="week-product__title title">Вязаные корзинки</h3>
+          <h3 class="week-product__title title week-title"> <span class="week-title__text">Вязаные корзинки</span></h3>
           <div class="week-product__container week-product__container--primary">
             <p class="week-product__description description">Экологически чистая пряжа,
               ручная работа. Доступны в шести расцветках и трёх размерах.</p>
@@ -170,7 +176,7 @@
         <div class="reviews__wrapper wrapper">
           <h2 class="reviews__title title reviews-title">Отзывы</h2>
           <p class="reviews__description reviews-description description">Я молодая мама, но всё равно фотографии не
-            набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила
+            набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В отчаянии, я накупила
             аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
           </p>
           <div class="reviews__container">
