--- a/source/index.html
+++ b/source/index.html
@@ -38,30 +38,34 @@
             </button>
           </div>
           <div class="main-nav__list list main-nav__list--close main-nav__list--noscript nav-list">
-            <div class="nav-list__secondary">
-              <article class="main-nav__item main-nav__item--catalog main-nav__item--secondary">
-                <a class="main-nav__link link" href="catalog.html">Каталог товаров</a>
-              </article>
-              <article class="main-nav__item main-nav__item--order main-nav__item--secondary">
-                <a class="main-nav__link link" href="#">Вязание на заказ</a>
-              </article>
-              <article class="main-nav__item main-nav__item--new main-nav__item--secondary">
-                <a class="main-nav__link link" href="#">Новые поступления</a>
-              </article>
-              <article class="main-nav__item main-nav__item--sale main-nav__item--secondary">
-                <a class="main-nav__link link" href="#">Распродажа</a>
-              </article>
+            <div class="nav-list__secondary list-secondary">
+              <div class="list-secondary__header">
+                <div class="main-nav__item main-nav__item--catalog main-nav__item--secondary">
+                  <a class="main-nav__link link" href="catalog.html">Каталог товаров</a>
+                </div>
+                <div class="main-nav__item main-nav__item--order main-nav__item--secondary">
+                  <a class="main-nav__link link" href="#">Вязание на заказ</a>
+                </div>
+              </div>
+              <div class="list-secondary__hero">
+                <div class="main-nav__item main-nav__item--new main-nav__item--secondary main-nav__item--hero">
+                  <a class="main-nav__link link" href="#">Новые поступления</a>
+                </div>
+                <div class="main-nav__item main-nav__item--sale main-nav__item--secondary main-nav__item--hero">
+                  <a class="main-nav__link link" href="#">Распродажа</a>
+                </div>
+              </div>
             </div>
-            <div class="nav-list__primary">
-              <article class="main-nav__item main-nav__item--search main-nav__item--primary">
+            <menu class="nav-list__primary title">
+              <div class="main-nav__item main-nav__item--search main-nav__item--primary">
                 <a class="main-nav__link link main-nav__link--search nav-link " href="#"> <span
                     class="nav-link__description nav-link__description--search">Поиск по сайту</span></a>
-              </article>
-              <article class="main-nav__item main-nav__item--cart main-nav__item--primary">
+              </div>
+              <div class="main-nav__item main-nav__item--cart main-nav__item--primary">
                 <a class="main-nav__link link main-nav__link--cart nav-link " href="#"><span
                     class="nav-link__description nav-link__description--cart">Корзина: пока пуста</span></a>
-              </article>
-            </div>
+              </div>
+            </menu>
             <p class="main-nav__free-delivery title">Бесплатная доставка по России</p>
           </div>
         </div>
