--- a/source/index.html
+++ b/source/index.html
@@ -40,31 +40,23 @@
           <div class="main-nav__list list main-nav__list--close main-nav__list--noscript nav-list">
             <div class="nav-list__secondary list-secondary">
               <div class="list-secondary__header">
-                <div class="main-nav__item main-nav__item--catalog main-nav__item--secondary">
-                  <a class="main-nav__link link" href="catalog.html">Каталог товаров</a>
-                </div>
-                <div class="main-nav__item main-nav__item--order main-nav__item--secondary">
-                  <a class="main-nav__link link" href="#">Вязание на заказ</a>
-                </div>
+                <a class="main-nav__link main-nav__link--catalog main-nav__link--secondary link"
+                  href="catalog.html">Каталог товаров</a>
+                <a class="main-nav__link main-nav__link--order main-nav__link--secondary link"
+                  href="catalog.html">Вязание на заказ</a>
               </div>
               <div class="list-secondary__hero">
-                <div class="main-nav__item main-nav__item--new main-nav__item--secondary main-nav__item--hero">
-                  <a class="main-nav__link link" href="#">Новые поступления</a>
-                </div>
-                <div class="main-nav__item main-nav__item--sale main-nav__item--secondary main-nav__item--hero">
-                  <a class="main-nav__link link" href="#">Распродажа</a>
-                </div>
+                <a class="main-nav__link main-nav__link--new main-nav__link--secondary main-nav__link--hero link"
+                  href="catalog.html">Новые поступления</a>
+                <a class="main-nav__link main-nav__link--sale main-nav__link--secondary main-nav__link--hero link"
+                  href="catalog.html">Распродажа</a>
               </div>
             </div>
             <menu class="nav-list__primary title">
-              <div class="main-nav__item main-nav__item--search main-nav__item--primary">
-                <a class="main-nav__link link main-nav__link--search nav-link " href="#"> <span
-                    class="nav-link__description nav-link__description--search">Поиск по сайту</span></a>
-              </div>
-              <div class="main-nav__item main-nav__item--cart main-nav__item--primary">
-                <a class="main-nav__link link main-nav__link--cart nav-link " href="#"><span
-                    class="nav-link__description nav-link__description--cart">Корзина: пока пуста</span></a>
-              </div>
+              <a class="main-nav__link link main-nav__link--search nav-link " href="#"> <span
+                  class="nav-link__description nav-link__description--search">Поиск по сайту</span></a>
+              <a class="main-nav__link link main-nav__link--cart nav-link " href="#"><span
+                  class="nav-link__description nav-link__description--cart">Корзина: пока пуста</span></a>
             </menu>
             <p class="main-nav__free-delivery title">Бесплатная доставка по России</p>
           </div>
@@ -186,10 +178,10 @@
           <div class="reviews__container">
             <p class="reviews__author reviews-author">Анастасия Красильникова <span
                 class="reviews-author__mail reviews-author__mail">@misssssiskras</span></p>
-            <div class="reviews__slider slider">
-              <button type="button" class="slider__button slider__button--previous"></button>
-              <button type="button" class="slider__button slider__button--next"></button>
-            </div>
+          </div>
+          <div class="reviews__slider slider">
+            <button type="button" class="slider__button slider__button--previous"></button>
+            <button type="button" class="slider__button slider__button--next"></button>
           </div>
           <a class="reviews__button transparent-button link" href="#"><span
               class="transparent-button__text">Написать</span></a>
@@ -239,7 +231,8 @@
             </picture>
           </noscript>
         </div>
-        <a class="contacts__button transparent-button link" href="feedback.html"> <span class="transparent-button__text">Напишите
+        <a class="contacts__button transparent-button link" href="feedback.html"> <span
+            class="transparent-button__text">Напишите
             нам</span></a>
       </section>
     </main>
