--- a/source/index.html
+++ b/source/index.html
@@ -171,19 +171,32 @@
       <section class="reviews">
         <div class="reviews__wrapper wrapper">
           <h2 class="reviews__title title reviews-title">Отзывы</h2>
-          <p class="reviews__description reviews-description description">Я молодая мама, но всё равно фотографии не
-            набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В отчаянии, я накупила
-            аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
-          </p>
-          <div class="reviews__container">
-            <p class="reviews__author reviews-author">Анастасия Красильникова <span
-                class="reviews-author__mail reviews-author__mail">@misssssiskras</span></p>
-          </div>
           <div class="reviews__slider slider">
-            <button type="button" class="slider__button slider__button--previous"></button>
-            <button type="button" class="slider__button slider__button--next"></button>
+            <ul class="slider__list list slider-list">
+              <li class="slider__item slider__item--current">
+                <p class="slider__description slider-description description">Я молодая мама, но всё равно фотографии не
+                  набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В отчаянии, я накупила
+                  аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше
+                  лайков!
+                </p>
+                <p class="slider__author slider-author">Анастасия Красильникова <span
+                    class="slider-author__mail">@misssssiskras</span></p>
+              </li>
+              <li class="slider__item slider__item">
+                <p class="slider__description slider-description description">Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Tenetur voluptatibus consectetur ipsam dicta autem commodi est in deserunt inventore
+                  corrupti mollitia, accusamus accusantium laborum ab placeat rem molestiae eum quae.
+                </p>
+                <p class="slider__author slider-author">Анастасия Барабанова<span
+                    class="slider-author__mail">@babababa</span></p>
+              </li>
+            </ul>
           </div>
-          <a class="reviews__button transparent-button link" href="#"><span
+          <div class="reviews__buttons slider-buttons">
+            <button type="button" class="slider-buttons__button slider-buttons__button--previous"></button>
+            <button type="button" class="slider-buttons__button slider-buttons__button--next"></button>
+          </div>
+          <a class="reviews__link transparent-button link" href="#"><span
               class="transparent-button__text">Написать</span></a>
         </div>
       </section>
