--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HTML Academy: Мишка</title>
+  <title>HTML Academy: Мишка. Вязание на заказ</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="icon" href="favicon.ico">
@@ -52,12 +52,12 @@
                   href="catalog.html">Распродажа</a>
               </div>
             </div>
-            <div class="nav-list__primary title">
+            <menu class="nav-list__primary title">
               <a class="main-nav__link link main-nav__link--search nav-link " href="#"> <span
                   class="nav-link__description nav-link__description--search">Поиск по сайту</span></a>
               <a class="main-nav__link link main-nav__link--cart nav-link " href="#"><span
                   class="nav-link__description nav-link__description--cart">Корзина: пока пуста</span></a>
-            </div>
+            </menu>
             <p class="main-nav__free-delivery title">Бесплатная доставка по России</p>
           </div>
         </div>
@@ -65,189 +65,9 @@
     </header>
     <!-- Контент -->
     <main class="main-container">
-      <h1 class="visually-hidden">Мишка - милые штуки ручной работы для дома.</h1>
-      <section class="hero">
-        <h2 class="hero__title hero-title title">Милые штуки ручной работы для дома</h2>
-        <div class="hero__container type-products">
-          <a class="type-products__link type-products__link--interior hero-link link" href="catalog.html">
-            <p class="hero-link__title hero-link__title--interior title hero-link-title"><span
-                class="hero-link-title__text">Предметы интерьера</span></p>
-          </a>
-          <a class="type-products__link type-products__link--toys hero-link link" href="catalog.html">
-            <p class="hero-link__title hero-link__title--toys title hero-link-title"><span
-                class="hero-link-title__text">Детские игрушки</span></p>
-          </a>
-        </div>
-      </section>
-      <section class="week-product">
-        <h2 class="visually-hidden">Товар недели</h2>
-        <div class="week-product__wrapper wrapper">
-          <h3 class="week-product__title title week-title"> <span class="week-title__text">Вязаные корзинки</span></h3>
-          <div class="week-product__container week-product__container--primary">
-            <p class="week-product__description description">Экологически чистая пряжа,
-              ручная работа. Доступны в шести расцветках и трёх размерах.</p>
-            <table class="week-product__table">
-              <tbody class="week-product-table">
-                <tr class="week-product-table__rows">
-                  <td class="week-product-table__description">Цвет:</td>
-                  <td class="week-product-table__description">тиффани/серый</td>
-                </tr>
-                <tr class="week-product-table__rows">
-                  <td class="week-product-table__description">Диаметр:</td>
-                  <td class="week-product-table__description">25 см</td>
-                </tr>
-                <tr class="week-product-table__rows">
-                  <td class="week-product-table__description">Высота:</td>
-                  <td class="week-product-table__description">15 см</td>
-                </tr>
-              </tbody>
-            </table>
-            <picture class="week-product__picture week-product-picture">
-              <source media="(min-width: 1150px)"
-                srcset="img/index_scarf/scarf_desktop.webp 1x, img/index_scarf/scarf_desktop@2x.webp 2x"
-                type="image/webp" width="525" height="638">
-              <source media="(min-width:1150px)"
-                srcset="img/index_scarf/scarf_desktop.jpg 1x, img/index_scarf/scarf_desktop@2x.jpg 2x" type="image/jpg"
-                width="525" height="638">
-              <source media="(min-width: 768px)"
-                srcset="img/index_scarf/scarf_tablet.webp 1x, img/index_scarf/scarf_tablet@2x.webp 2x" type="image/webp"
-                width="334" height="404">
-              <source media="(min-width: 768px)"
-                srcset="img/index_scarf/scarf_tablet.jpg 1x, img/index_scarf/scarf_tablet@2x.jpg 2x" type="image/jpg"
-                width="334" height="404">
-              <source media="(min-width:320px)"
-                srcset="img/index_scarf/scarf_mobile.webp 1x, img/index_scarf/scarf_mobile@2x.webp 2x" type="image/webp"
-                width="260" height="315">
-              <img class="week-product-picture__image week-product-image" loading="lazy"
-                src="img/index_scarf/scarf_mobile.jpg" srcset="img/index_scarf/scarf_mobile@2x.jpg 2x" width="260"
-                height="315" alt="Шарф.">
-            </picture>
-            <div class="week-product__container week-product__container--secondary">
-              <p class="week-product__description description week-product__description--price">
-                Цена: 990 руб.</p>
-              <button class="week-product__button transparent-button"><span
-                  class="transparent-button__text">Заказать</span></button>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="about-us">
-        <div class="about-us__wrapper wrapper">
-          <h2 class="about-us__title title about-us-title">Коротко о нас:</h2>
-          <ul class="about-us__list about-us-list list">
-            <li class="about-us__item about-us-item about-us__item--eco">
-              <p
-                class="about-us-item__desicription about-us-item-desicription about-us-item__desicription--eco description">
-                Экологически чистые материалы</p>
-            </li>
-            <li class="about-us__item about-us-item about-us__item--money">
-              <p
-                class="about-us-item__desicription about-us-item-desicription about-us-item__desicription--money description">
-                Скандинавский стиль по российской цене</p>
-            </li>
-            <li class="about-us__item about-us-item about-us__item--like">
-              <p
-                class="about-us-item__desicription about-us-item-desicription about-us-item__desicription--like description">
-                Увеличивает лайки на фотографиях</p>
-            </li>
-            <li class="about-us__item about-us-item about-us__item--thread">
-              <p
-                class="about-us-item__desicription about-us-item-desicription about-us-item__desicription--thread description">
-                Связано вручную с любовью и умилением</p>
-            </li>
-            <li class="about-us__item about-us-item about-us__item--support">
-              <p
-                class="about-us-item__desicription about-us-item-desicription about-us-item__desicription--support description">
-                Поддержка отечественного производителя</p>
-            </li>
-            <li class="about-us__item about-us-item about-us__item--gift">
-              <p
-                class="about-us-item__desicription about-us-item-desicription about-us-item__desicription--gift description">
-                Поставляется в подарочной упаковке</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="reviews">
-        <div class="reviews__wrapper wrapper">
-          <h2 class="reviews__title title reviews-title">Отзывы</h2>
-          <div class="reviews__slider slider">
-            <ul class="slider__list list slider-list">
-              <li class="slider__item slider__item--current">
-                <p class="slider__description slider-description description">Я молодая мама, но всё равно фотографии не
-                  набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В отчаянии, я накупила
-                  аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше
-                  лайков!
-                </p>
-                <p class="slider__author slider-author">Анастасия Красильникова <span
-                    class="slider-author__mail">@misssssiskras</span></p>
-              </li>
-              <li class="slider__item slider__item">
-                <p class="slider__description slider-description description">Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Tenetur voluptatibus consectetur ipsam dicta autem commodi est in deserunt inventore
-                  corrupti mollitia, accusamus accusantium laborum ab placeat rem molestiae eum quae.
-                </p>
-                <p class="slider__author slider-author">Анастасия Барабанова<span
-                    class="slider-author__mail">@babababa</span></p>
-              </li>
-            </ul>
-          </div>
-          <div class="reviews__buttons slider-buttons">
-            <button type="button" class="slider-buttons__button slider-buttons__button--previous"></button>
-            <button type="button" class="slider-buttons__button slider-buttons__button--next"></button>
-          </div>
-          <a class="reviews__link transparent-button link" href="#"><span
-              class="transparent-button__text">Написать</span></a>
-        </div>
-      </section>
-      <section class="contacts">
-        <div class="contacts__wrapper wrapper">
-          <h2 class="contacts__title title contacts-title">Контакты</h2>
-          <div class="contacts__container">
-            <div class="contacts__mail contacts-mail">
-              <span class="contacts-mail__title">e-mail:</span>
-              <a class="contacts-mail__link link mail-link" href="mailto:info@mimimishkashop.ru"> <span
-                  class="mail-link__text">info@mimimishkashop.ru</span></a>
-            </div>
-            <div class="contacts__adress contacts-adress">
-              <span class="contacts-adress__title">адрес:</span>
-              <span class="contacts-adress__description">г. Санкт-Петербург<br>ул. Большая Конюшенная<br>д. 19/8, офис
-                101</span>
-            </div>
-          </div>
-        </div>
-        <div class="contacts__location location">
-          <iframe title="Карта." class="location__map location__map--nojs"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037876728603!2d30.32047247715258!3d59.93871647491512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x62740c0ffcd8a91f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsIDEwMSwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MTE4Ng!5e0!3m2!1sru!2sru!4v1698738594279!5m2!1sru!2sru"
-            width="320" height="455" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-          <noscript>
-            <picture>
-              <source media="(min-width: 1150px)"
-                srcset="img/location/location_desktop.webp, img/location/location_desktop@2x.webp 2x" width="527"
-                height="457" type="image/webp">
-              <source media="(min-width: 1150px)"
-                srcset="img/location/location_desktop.jpg, img/location/location_desktop@2x.jpg 2x" width="527"
-                height="457" type="image/jpg">
-              <source media="(min-width: 768px)"
-                srcset="img/location/location_tablet.webp, img/location/location_tablet@2x.webp 2x" width="768"
-                height="457" type="image/webp">
-              <source media="(min-width: 768px)"
-                srcset="img/location/location_tablet.jpg, img/location/location_tablet@2x.jpg 2x" width="768"
-                height="457" type="image/jpg">
-              <source media="(min-width: 320px)"
-                srcset="img/location/location_mobile.webp, img/location/location_mobile@2x.webp 2x" width="320"
-                height="455" type="image/webp">
-              <img class="location__map" loading="lazy" src="img/location/location_mobile.jpg"
-                srcset="img/location/location_mobile@2x.jpg" width="320" height="455"
-                alt="Расположение на карте города.">
-            </picture>
-          </noscript>
-        </div>
-        <a class="contacts__button transparent-button link" href="feedback.html"> <span
-            class="transparent-button__text">Напишите
-            нам</span></a>
-      </section>
+      <h1 class="visually-hidden">Мишка - Вязание на заказ.</h1>
+      <section class="hero hero--form">
+        <h2 class="hero__title hero-title title">Вязание на заказ</h2>
     </main>
     <!-- Подвал -->
     <footer class="main-footer">
