--- a/source/index.html
+++ b/source/index.html
@@ -67,8 +67,9 @@
     <main class="main-container">
       <h1 class="visually-hidden">Мишка - милые штуки ручной работы для дома.</h1>
       <section class="hero">
+        <div class="hero__container hero__container--index">
         <h2 class="hero__title hero-title title">Милые штуки ручной работы для дома</h2>
-        <div class="hero__container type-products">
+        <div class="hero__type type-products">
           <a class="type-products__link type-products__link--interior hero-link link" href="catalog.html">
             <p class="hero-link__title hero-link__title--interior title hero-link-title"><span
                 class="hero-link-title__text">Предметы интерьера</span></p>
@@ -78,6 +79,7 @@
                 class="hero-link-title__text">Детские игрушки</span></p>
           </a>
         </div>
+      </div>
       </section>
       <section class="week-product">
         <h2 class="visually-hidden">Товар недели</h2>
