--- a/source/index.html
+++ b/source/index.html
@@ -42,8 +42,8 @@
               <div class="list-secondary__header">
                 <a class="main-nav__link main-nav__link--catalog main-nav__link--secondary link"
                   href="catalog.html">Каталог товаров</a>
-                <a class="main-nav__link main-nav__link--order main-nav__link--secondary link"
-                  href="form.html">Вязание на заказ</a>
+                <a class="main-nav__link main-nav__link--order main-nav__link--secondary link" href="form.html">Вязание
+                  на заказ</a>
               </div>
               <div class="list-secondary__hero">
                 <a class="main-nav__link main-nav__link--new main-nav__link--secondary main-nav__link--hero link"
@@ -68,18 +68,18 @@
       <h1 class="visually-hidden">Мишка - милые штуки ручной работы для дома.</h1>
       <section class="hero">
         <div class="hero__container hero__container--index">
-        <h2 class="hero__title hero-title title">Милые штуки ручной работы для дома</h2>
-        <div class="hero__type type-products">
-          <a class="type-products__link type-products__link--interior hero-link link" href="catalog.html">
-            <p class="hero-link__title hero-link__title--interior title hero-link-title"><span
-                class="hero-link-title__text">Предметы интерьера</span></p>
-          </a>
-          <a class="type-products__link type-products__link--toys hero-link link" href="catalog.html">
-            <p class="hero-link__title hero-link__title--toys title hero-link-title"><span
-                class="hero-link-title__text">Детские игрушки</span></p>
-          </a>
+          <h2 class="hero__title hero-title title">Милые штуки ручной работы для дома</h2>
+          <div class="hero__type type-products">
+            <a class="type-products__link type-products__link--interior hero-link link" href="catalog.html">
+              <p class="hero-link__title hero-link__title--interior title hero-link-title"><span
+                  class="hero-link-title__text">Предметы интерьера</span></p>
+            </a>
+            <a class="type-products__link type-products__link--toys hero-link link" href="catalog.html">
+              <p class="hero-link__title hero-link__title--toys title hero-link-title"><span
+                  class="hero-link-title__text">Детские игрушки</span></p>
+            </a>
+          </div>
         </div>
-      </div>
       </section>
       <section class="week-product">
         <h2 class="visually-hidden">Товар недели</h2>
@@ -193,10 +193,10 @@
                     class="slider-author__mail">@babababa</span></p>
               </li>
             </ul>
-          </div>
-          <div class="reviews__buttons slider-buttons">
-            <button type="button" class="slider-buttons__button slider-buttons__button--previous"></button>
-            <button type="button" class="slider-buttons__button slider-buttons__button--next"></button>
+            <div class="reviews__buttons slider-buttons">
+              <button type="button" class="slider-buttons__button slider-buttons__button--previous"></button>
+              <button type="button" class="slider-buttons__button slider-buttons__button--next"></button>
+            </div>
           </div>
           <a class="reviews__link transparent-button link" href="#"><span
               class="transparent-button__text">Написать</span></a>
@@ -333,11 +333,32 @@
       <div class="modal-container__modal modal">
         <p class="modal__title title">Добавить в корзину</p>
         <p class="modal__description description">Выберите размер:</p>
-        <div class="modal__buttons size">
-          <button type="button" class="size__button size__button--checked">s</button>
-          <button type="button" class="size__button">m</button>
-          <button type="button" class="size__button">l</button>
-        </div>
+        <form class="modal__buttons size">
+          <fieldset class="size__radio fieldset">
+            <legend class="visually-hidden">Выбрать размер</legend>
+            <ul class="size__list list">
+              <li class="size__item">
+                <label class="size__label" for="small">
+                  <input class="size__input input visually-hidden" type="radio" id="small" value="small" name="size"
+                    checked>
+                  <span class="size__description"><span class="size__text">s</span></span>
+                </label>
+              </li>
+              <li class="size__item">
+                <label class="size__label" for="medium">
+                  <input class="size__input input visually-hidden" type="radio" id="medium" value="medium" name="size">
+                  <span class="size__description"><span class="size__text">m</span></span>
+                </label>
+              </li>
+              <li class="size__item">
+                <label class="size__label" for="large">
+                  <input class="size__input input visually-hidden" type="radio" id="large" value="large" name="size">
+                  <span class="size__description"><span class="size__text">l</span></span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+        </form>
         <button type="button" class="modal__button green-button">Добавить</button>
       </div>
     </div>
