--- a/source/form.html
+++ b/source/form.html
@@ -70,7 +70,7 @@
         <div class="hero__container hero__container--form">
           <h2 class="hero__title hero__title--form hero-title title">Вязание на заказ</h2>
         </div>
-          <p class="hero__description description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую
+          <p class="hero__description description wrapper">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую
             форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
       </section>
       <section class="knitting">
@@ -78,8 +78,9 @@
         <form class="knitting__form form" action="https://echo.htmlacademy.ru/" method="get">
           <!-- radio -->
           <fieldset class="form__type type fieldset fieldset--type">
-            <legend class="type__title legend legend--type title">тип</legend>
+            <legend class="visually-hidden">тип</legend>
             <div class="fieldset__container fieldset__container--type wrapper">
+              <h3 class="type__title legend legend--type title">тип</h3>
               <ul class="type__list type-list list">
                 <li class="type-list__item">
                   <label class="type-list__label" for="interior">
@@ -100,8 +101,9 @@
           </fieldset>
           <!-- checkbox -->
           <fieldset class="form__color color fieldset fieldset--color">
-            <legend class="color__title legend legend--color title">цвет</legend>
+            <legend class="visually-hidden">цвет</legend>
             <div class="fieldset__container fieldset__container--color wrapper">
+              <h3 class="color__title legend legend--color title">цвет</h3>
               <label class="color__label" for="white">
                 <input class="color__input input visually-hidden" type="checkbox" id="white" value="white" name="color"
                   checked>
@@ -134,8 +136,9 @@
           </fieldset>
           <!-- name surname -->
           <fieldset class="form__name name fieldset">
-            <legend class="name__title legend legend--name title">фио</legend>
+            <legend class="visually-hidden">Фамилия Имя Отчество</legend>
             <div class="fieldset__container fieldset__container--name wrapper">
+              <h3 class="name__title legend legend--name title">фио</h3>
               <label class="name__label label" for="name">
                 <span class="name__description">Имя:</span>
                 <input class="name__input input" type="text" name="name" id="name" placeholder="Введите ваше имя*"
@@ -155,8 +158,9 @@
           </fieldset>
           <!-- tel mail -->
           <fieldset class="form__phone phone fieldset">
-            <legend class="phone__title legend title">тел</legend>
+            <legend class="visually-hidden">телефон</legend>
             <div class="fieldset__container fieldset__container--phone wrapper">
+              <h3 class="phone__title legend title">тел</h3>
               <label class="phone__label label" for="phone">
                 <input class="phone__input input" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" id="phone"
                   name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
@@ -164,8 +168,9 @@
             </div>
           </fieldset>
           <fieldset class="form__email email fieldset">
-            <legend class="email__title legend title">E-mail</legend>
+            <legend class="visually-hidden">E-mail</legend>
             <div class="fieldset__container fieldset__container--email wrapper">
+              <h3 class="email__title legend title">E-mail</h3>
               <label class="email__label label" for="email">
                 <input class="email__input input" type="email" name="email" id="email" placeholder="Ваш Email*"
                   required>
@@ -173,8 +178,9 @@
             </div>
           </fieldset>
           <fieldset class="form__add add fieldset">
-            <legend class="add__title legend title">Доп</legend>
+            <legend class="visually-hidden">Дополнительно</legend>
             <div class="fieldset__container fieldset__container--add wrapper">
+              <h3 class="add__title legend title">Доп</h3>
               <label class="add__label label" for="add">
                 <span class="visually-hidden">Напишите свои пожелания</span>
                 <textarea class="add__input" rows="7" id="add" name="add"
