--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="img/favicons/favicon_32.svg" type="image/svg+xml">
   <link rel="preload" href="fonts/open_sans_regular.woff2" as="font" />
   <link rel="preload" href="fonts/open_sans_bold.woff2" as="font" />
   <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png" />
